tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match10.bal
import ballerina/java;

function decimalParamAndReturnAsObject(decimal a1) returns decimal = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;

